# cera

./: .gitattributes  .gitignore  AMD_395_HYBRID_TEST.md  CLAUDE.md  Cargo.toml  Package.swift  README.md  justfile
.cargo/: config.toml
.github/workflows/: benchmarks.yml  ci.yml  publish-cli.yml  publish-crates.yml  publish-jvm.yml  publish-npm.yml  publish.yml
benchmarks/: BASELINE.md  GPU_FINDINGS_CORRECTION.md  README.md  cache_compare.md  cache_compare.sh  deltas_table.md  profile_longctx.md  results_table.md
benchmarks/profile_longctx_raw/: 450m_decode_ctx128.stderr  450m_decode_ctx2048.stderr  450m_decode_ctx4096.stderr  450m_noattn_p1024.stderr  450m_noattn_p128.stderr  450m_noattn_p4096.stderr
cera/: Cargo.toml  README.md  build.rs
cera-cli/: Cargo.toml  README.md
cera-cli/grammars/: json.gbnf
cera-cli/src/: chat_tui.rs  image_source.rs  main.rs  signal.rs  thermal.rs
cera-ffi/: Cargo.toml  README.md  build.rs
cera-ffi-flutter/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
cera-ffi-flutter/example/: cera_async.dart  cera_generate.dart  cera_progress.dart  cera_stream.dart
cera-ffi-flutter/lib/: cera_ffi_flutter.dart
cera-ffi-flutter/lib/src/: library_loader.dart  library_loader_io.dart  library_loader_web.dart
cera-ffi-flutter/tool/: patch_generated_bindings.dart
cera-ffi-kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
cera-ffi-kotlin/cera-ffi-android/: build.gradle.kts
cera-ffi-kotlin/cera-ffi-jvm/: build.gradle.kts
cera-ffi-kotlin/gradle/: libs.versions.toml
cera-ffi/apple/Sources/Cera/: cera_ffi.swift
cera-ffi/bindings/kotlin/uniffi/cera_ffi/: cera_ffi.kt
cera-ffi/bindings/swift/: cera_ffi.swift  cera_ffiFFI.h  cera_ffiFFI.modulemap
cera-ffi/src/: lib.rs
cera-ffi/tests/swift/: main.swift
cera-parity/: Cargo.toml  README.md
cera-parity/legs/kotlin/: build.gradle.kts  settings.gradle.kts
cera-parity/legs/kotlin/src/main/kotlin/com/hyeonslab/ceraparity/: Main.kt
cera-parity/legs/swift/: Package.swift  README.md
cera-parity/legs/swift/Sources/CeraParitySwift/: cera_ffi.swift  main.swift
cera-parity/legs/swift/Sources/cera_ffiFFI/: cera_ffiFFI.h  module.modulemap
cera-parity/src/: lib.rs  main.rs
cera-parity/tests/: parity.rs  parity_kotlin.rs  parity_swift.rs
cera-wasm/: Cargo.toml  README.md  webdriver.json
cera-wasm/examples/webgpu/: index.html
cera-wasm/src/: lib.rs
cera-wasm/tests/: webgpu_smoke.rs
cera/schema/: kv_cache.fbs
cera/src/: audio_engine.rs  engine.rs  gguf.rs  grammar.rs  kv_cache.rs  lib.rs  lora.rs  manifest.rs  par.rs  quant.rs  sampler.rs  session.rs  sysmem.rs  tensor.rs  time.rs  tokenizer.rs  tools.rs  turboquant.rs
cera/src/backend/: blas.rs  calibrate.rs  cpu.rs  cpu_features.rs  metal.rs  mod.rs  simd.rs  threadpool.rs  wgpu.rs
cera/src/backend/metal/: params.rs
cera/src/backend/shaders/: argmax_f32.wgsl  attention_prefill.metal  attention_prefill.wgsl  bias_add.metal  bias_add.wgsl  common_decls.tmpl  conv1d_fused_batch.wgsl  elementwise.metal  elementwise.wgsl  flash_attention.wgsl  gelu.metal  gelu.wgsl  gemm_f32.metal  gemm_f32.wgsl  gemm_q4_0.wgsl  gemm_q4_1.metal  gemm_q4_k.metal  gemm_q4_k.wgsl  gemm_q6_k.metal  gemv_f32.metal  gemv_f32.wgsl  gemv_q4_0.metal  gemv_q4_0_fast.wgsl  gemv_q4_1.metal  gemv_q4_k.metal  gemv_q4_k.wgsl  gemv_q5_k.wgsl  gemv_q6_k.metal  gemv_q6_k.wgsl  gemv_q8_0.metal  gemv_q8_0.wgsl  kv_shift.metal  kv_shift.wgsl  layernorm_batch.metal  (+15 more)
cera/src/bundle/: download.rs  mod.rs
cera/src/model/: audio_decoder.rs  audio_encoder.rs  gpu_lfm2.rs  gpu_weight_source.rs  lfm2.rs  llama.rs  metal_audio_decoder.rs  metal_lfm2.rs  mod.rs  transformer.rs  vision_encoder.rs  vision_encoder_gpu.rs  vision_preprocessor.rs  weights.rs
cera/tests/: attention_metal_parity.rs  avx2_decode_prefill_identity.rs  avx512_quantizer_gate.rs  bench_conv2d.rs  bench_perf.rs  blas_correctness.rs  blas_parity.rs  bundle_download.rs  bundle_from_id.rs  cancel_mid_prefill.rs  depthformer_sensitivity.rs  depthformer_smoke.rs  detok_bypass.rs  detok_metal_parity.rs  detokenize_smoke.rs  embedding_roundtrip.rs  engine_load.rs  frame2_codes.rs  gemv_q4_0_bench.rs  gpu_transformer_parity.rs  grammar.rs  hidden_states_parity.rs  int8_gemm_gate.rs  layer0_compare.rs  lfm2_batched_prefill_parity.rs  list_bundles_live.rs  llama_batched_prefill_parity.rs  llm_layer0_compare.rs  lora_metal_parity.rs  lora_parity.rs  lora_wgpu_parity.rs  manifest_parse.rs  metal_kv_shift_oracle.rs  metal_params_layout.rs  metal_shaders_parity.rs  n_keep_shift.rs  oracle_qwen2.rs  oracle_text.rs  quality_gate.rs  sample_frame_smoke.rs  (+12 more)
cera/tests/common/: download.rs
cera/tests/fixtures/: README.md
docs/: GPU_CONTEXT_PERFORMANCE_PLAN.md  IMPLEMENTATION_PLAN.md
examples/CeraChat/: .gitignore  README.md  project.yml
examples/CeraChat/Sources/: CeraChatApp.swift  ChatView.swift  EmbedView.swift  EngineStore.swift  LoadView.swift
scripts/: bench_android.sh  bench_matrix.sh  benchmark_matrix.py  bump-version.sh  ci-bench.sh  compare_tokenizer.py  fetch_test_models.sh  format_deltas.py  profile_android_cpu.sh  profile_cpu.sh  profile_longctx.sh
scripts/oracle/: README.md  gen_fixtures.sh  gen_qwen2_fixtures.sh  gen_text_oracle.py  vendor_llama_cpp.sh
wick/: Cargo.toml
wick-cli/: Cargo.toml
wick-cli/src/: chat_tui.rs  image_source.rs  main.rs
wick-ffi/bindings/swift/: wick_ffi.swift  wick_ffiFFI.h
wick-ffi/src/: lib.rs
wick-wasm/: Cargo.toml
wick/src/: engine.rs  gguf.rs  kv_cache.rs  session.rs
wick/src/backend/: mod.rs  wgpu.rs  wgsl_pp.rs
wick/src/model/: audio_decoder.rs  audio_encoder.rs  gpu_lfm2.rs  lfm2.rs  metal_lfm2.rs  mod.rs  vision_encoder.rs  vision_preprocessor.rs  weights.rs
wick/tests/: bench_perf.rs  depthformer_sensitivity.rs  depthformer_smoke.rs  detok_bypass.rs  detok_metal_parity.rs  detokenize_smoke.rs  frame2_codes.rs  layer0_compare.rs  metal_kv_shift_oracle.rs  sample_frame_smoke.rs  session_chain.rs  single_token_attn.rs  vl_bundle_load.rs  vocoder_load.rs
wick/tests/fixtures/: README.md
(+39 files in other folders)
