[package]
name = "cera-parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parity harness for cera — runs the same prompt through every binding leg and byte-compares token streams against a Rust reference."
publish = false

[lib]
# Plain `lib` — future Kotlin-via-JNA / Swift-via-UniFFI legs may want
# to reuse `RunArgs` / `default_cache_dir` without paying for a
# subprocess hop. Keeping the bin separate from the lib means each
# leg can choose how it wants to integrate.
name = "cera_parity"
path = "src/lib.rs"

[[bin]]
name = "cera-parity"
path = "src/main.rs"

[dependencies]
# `cera-ffi` already pulls `cera` with `features = ["remote"]`
# unconditionally, so feature unification means `from_bundle_id` is
# always available across this workspace dep graph. No separate
# `remote` feature on `cera-parity` itself — would just be ceremony.
cera = { path = "../cera", version = "0.1.1" }
cera-ffi = { path = "../cera-ffi", version = "0.1.1" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
