[package]
name = "cera-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm-bindgen browser/Node bindings for the cera inference engine"
# wasm-pack + cargo both read this when building / packaging.
# The LICENSE-* entries are symlinks to the workspace-root copies
# so we don't duplicate the text on disk; cargo, npm, and git all
# follow them transparently. README.md is listed explicitly so
# crates.io picks it up if/when this crate is published there;
# wasm-pack also copies it into `pkg/README.md` for the npm side.
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[lib]
# `cdylib` produces the `.wasm` artifact that wasm-bindgen-cli post-
# processes into JS glue. `rlib` is kept so this crate can also be
# linked into native test binaries (none today, but cheap to leave on
# and future-proofs against `wasm-bindgen-test --node` runners that
# need both shapes).
crate-type = ["cdylib", "rlib"]

[dependencies]
# cera is consumed with default features off ŌĆö none of the current
# exports need mmap / parallel / std-fs / disk-cache. Future engine /
# session wrappers (Phase 3.x) will turn on the features they need
# rather than dragging the desktop default-set into wasm builds.
#
# The opt-in `parallel` feature on this crate flips
# `cera/parallel` on for threaded wasm builds ŌĆö see the [features]
# table below.
cera = { path = "../cera", version = "0.2.6", default-features = false }
wasm-bindgen.workspace = true
# Used only by the JsError mapping helper to format cera's anyhow-typed
# errors with `{:#}` (full chain). No native heuristics or backtraces;
# wasm builds get the same compact `e: cause: ŌĆ”` output JS callers
# can render.
anyhow.workspace = true
# `js_sys::Function` (token-streaming callback arg type) and
# `js_sys::Uint32Array` (copying token batches into JS-owned memory
# for the `on_text_tokens` trampoline). Already a transitive dep of
# wasm-bindgen; declared here because we use the public types.
js-sys = "0.3"
# Bridges Rust `Future`s to JS Promises ŌĆö required for the `async`
# `#[wasm_bindgen]` exports on the WebGPU session (`WebGpuSession`).
# wasm-bindgen's async-fn codegen references `wasm_bindgen_futures`
# directly, so it must be a declared dependency.
wasm-bindgen-futures = { workspace = true }

# `wasm-bindgen-rayon` is wasm-only ŌĆö it pulls in `web_sys::Worker`
# / Node `worker_threads` glue that doesn't exist on native targets.
# Scoping under `cfg(target_arch = "wasm32")` keeps `cargo check
# --workspace` happy on the host even with `--features parallel`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { workspace = true, optional = true }

# `wasm-bindgen-test` drives the headless-Chrome WebGPU smoke test
# (`tests/webgpu_smoke.rs`) via `wasm-pack test --headless --chrome
# --features wgpu`. wasm-only ŌĆö the runner injects a browser harness.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
# `parallel` ŌĆö opt-in multi-threaded wasm build. Lights up
# `cera/parallel` (rayon) and links `wasm-bindgen-rayon`, which
# emits a `#[wasm_bindgen]` `initThreadPool(numThreads)` export
# that JS callers `await` once before driving inference.
#
# Only useful with the matching build flags: atomics target-feature
# + `-Z build-std=panic_abort,std`. The `wasm-web-mt` / `wasm-node-mt`
# justfile recipes wire those in. Plain `wasm-pack build --features
# parallel` without those flags will fail to link ŌĆö that's intended,
# the recipes are the supported entry point.
#
# Browsers also need cross-origin isolation (COOP `same-origin` +
# COEP `require-corp` headers on the host page) for
# `SharedArrayBuffer` to be available. Node has no equivalent gate.
parallel = ["cera/parallel", "dep:wasm-bindgen-rayon"]

# `wgpu` ŌĆö opt-in WebGPU compute backend. Turns on `cera/gpu`, which
# pulls in the wgpu compute pipelines so Q4_0 LFM2 prefill + decode
# can run on the GPU. Track B PR 4.1 (wasm wiring; not Track A ŌĆö
# Track A is the kernel-parity work that already shipped in
# #151/#154/#156/#157): this PR only wires the cargo feature so the
# build succeeds with `gpu` enabled on wasm32; no wgpu init /
# dispatch surface is exposed through cera-wasm yet. The async init
# + sync-forward shim that lets JS callers run inference on the GPU
# is Track B PR 4.2.
#
# Note: cannot be combined with `parallel` today. The
# `fragile-send-sync-non-atomic-wasm` feature on wgpu only lights up
# its Send+Sync impls when the `atomics` target-feature is OFF; the
# threaded build sets `atomics` (via `wasm-web-mt` / `wasm-node-mt`)
# and wgpu types stop being Sync, breaking the `Model: Send + Sync`
# bound. A multi-threaded wgpu wasm build would need to run wgpu on
# a dedicated worker (atomics-free per-worker) or wait for upstream
# wgpu to ship atomics-safe Send+Sync ŌĆö both are post-PR-4.2 work.
wgpu = ["cera/gpu"]

[package.metadata.docs.rs]
# docs.rs runs on linux x86_64 by default, which would skip the
# `cfg(target_arch = "wasm32")` lib-level guard and produce empty
# docs. Pin docs.rs to wasm32 so the wrapper surface actually
# renders.
targets = ["wasm32-unknown-unknown"]

# wasm-pack profile config (consumed by `wasm-pack build --release`).
#
# `-O3` over `-Oz`: this is an inference engine, hot-loop perf matters
# more than minimum download size, and `-Oz` can cost ~5% on tight
# numerical loops. `-O3` still cuts the binary ~50% from the LTO-only
# baseline.
#
# Feature flags enable wasm proposals that modern wasm-bindgen +
# rustc emit by default:
#   - `--enable-sign-ext`           ŌĆö i32/i64 sign-extension ops
#   - `--enable-bulk-memory`        ŌĆö `memory.copy` / `memory.fill`
#   - `--enable-mutable-globals`    ŌĆö required by `getrandom/js`
#   - `--enable-nontrapping-float-to-int` ŌĆö saturating floatŌåÆint
#   - `--enable-reference-types`    ŌĆö `externref` (used by JS interop)
#   - `--enable-threads`            ŌĆö atomics + shared-memory ops
#                                     emitted by the threaded build
#                                     (`--features parallel`). No-op
#                                     on single-threaded builds (no
#                                     atomic ops in the wasm body),
#                                     so always-on is safe.
# All six are universally supported in browsers + Node since
# late-2020 builds; without them, wasm-opt refuses the wasm-bindgen
# input as "non-MVP". Pin them here so local + CI builds stay in
# sync.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-O3',
    '--enable-sign-ext',
    '--enable-bulk-memory',
    '--enable-mutable-globals',
    '--enable-nontrapping-float-to-int',
    '--enable-reference-types',
    '--enable-threads',
]
